--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/1. 同步定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/1. 同步定时器.md
@@ -10,37 +10,37 @@
 
 a）进入全自动测试平台，单击接口测试 > 测试场景管理 > 新增场景。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/image.png)
+![image](https://user-images.githubusercontent.com/79617492/192245379-609b09fa-12ea-4064-a1fe-9c5dea86ef28.png)
 
 ##### 图1-1 单击新增场景
 
 b）选择根场景组，单击右侧的“+”图标，单击接口。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192245403-7a306bd1-a12e-4e12-bda9-61f18249a9d2.png)
 
 ##### 图1-2 单击接口
 
 c）选中模块，勾选一个接口，单击确定。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192245421-604efa18-3810-4acc-8efc-f51828552c20.png)
 
 ##### 图1-3 单击确定
 
 d）选中接口，单击右侧的“+”图标，单击定时器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-4.png)
+![image](https://user-images.githubusercontent.com/79617492/192245444-18b22b70-af00-4749-8bc7-1eec03a07e7a.png)
 
 ##### 图1-4 单击定时器
 
 e）选中定时器，下拉框中选择“同步定时器”。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-5.png)
+![image](https://user-images.githubusercontent.com/79617492/192245459-e1cc05e3-1d38-455f-86bd-c060b58cd6a8.png)
 
 ##### 图1-5 选择“同步定时器”
 
 f）填写“集合用户数”和“集合等待时间”，选择环境，单击保存即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/1-6.png)
+![image](https://user-images.githubusercontent.com/79617492/192245478-37751fd8-dd5c-4618-a0e1-256c6f3b4ff6.png)
 
 ##### 图1-6 填写相关信息
 
