--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/3. 泊松随机定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/3. 泊松随机定时器.md
@@ -10,19 +10,19 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击根场景组，然后单击＋号按钮 > 定时器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/192464097-dfbd39f1-2b88-4197-bbd4-188a5c29f7fb.png)
 
 ##### 图3-1 单击＋号按钮 > 定时器
 
 b）定时器里选择泊松随机定时器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192464112-abd2b63b-07a5-4fc1-a1fd-c87a24ae18c7.png)
 
 ##### 图3-2 选择泊松随机定时器
 
 c）输入固定延迟时间和随机延迟最大时间，然后单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/3-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192464134-5fdd4ab1-2fc4-4992-902e-7c5d7f1097bd.png)
 
 ##### 图3-3 单击执行
 
@@ -30,6 +30,6 @@ c）输入固定延迟时间和随机延迟最大时间，然后单击执行。
 
 d）延迟时间结束后才执行接口请求，然后显示执行报告。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/3-4.png)
+![image](https://user-images.githubusercontent.com/79617492/192464158-2fda6806-f4c7-4e62-ab4d-66300c1c02b7.png)
 
 ##### 图3-4 显示执行报告
