--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/4. 统一随机定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/4. 统一随机定时器.md
@@ -1,1 +1,21 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.4 定时器
+
+##### 4.4.4 统一随机定时器
+
+统一随机定时器可以让接口在随机的延迟时间后进行请求，当统一随机定时器增加在根场景组下时，延迟时间会作用于根场景组下的所有接口的请求，当统一随机定时器增加在接口下时，延迟时间只会作用于该接口的请求。本章节将详细介绍统一随机定时器的使用。
+
+##### 4.4.4.1 操作步骤
+
+a）进入项目的接口测试功能模块，切换到测试场景管理页面，选中对应的测试用例，单击新增场景。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/4-1.png)
+
+##### 图4-1 单击新增场景
+
+b）选中“根场景组”，单击加号 > 定时器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/4-2.png)
+
+##### 图4-2 单击加号 > 定时器
