--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/4. 统一随机定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/4. 统一随机定时器.md
@@ -19,3 +19,19 @@ b）选中“根场景组”，单击加号 > 定时器。
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/4-2.png)
 
 ##### 图4-2 单击加号 > 定时器
+
+c）展开定时器组件，选择“统一随机定时器”，填入固定延迟时间、随机延迟时间最大值。
+
+##### 说明：总的延迟时间=固定延迟时间+随机延迟时间（最大时间内的随机时间）
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/4-3.png)
+
+##### 图4-3 填写相关信息
+
+d）再次选中“根场景组”，单击加号 > 接口，进入“选择接口”页面。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/4-4.png)
+
+##### 图4-4 进入“选择接口”页面
+
+e）在“选择接口”页面，勾选需要的接口后，单击确定。
