--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/5. 高斯随机定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/5. 高斯随机定时器.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.4 定时器
+
+##### 4.4.5 高斯随机定时器
+
+高斯随机定时器会在线程请求之间暂停一段随机的时间，出现的大部分时间间隔接近于一个指定的值。总的延迟是高斯分布值与指定值的积再加上偏移量的和。当高斯定时器增加在根场景组下时，延迟时间会作用于根场景组下的所有接口的请求，当高斯定时器增加在接口下时，延迟时间只会作用于该接口的请求。
+
+##### 4.4.5.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击根场景组，然后单击＋号按钮 > 定时器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/5-1.png)
+
+##### 图5-1 单击＋号按钮 > 定时器
+
+b）定时器里选择高斯随机定时器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/5-2.png)
