--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/5. 高斯随机定时器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/4. 定时器/5. 高斯随机定时器.md
@@ -10,19 +10,19 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击根场景组，然后单击＋号按钮 > 定时器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/192465372-d688ea99-291a-4a95-ab96-ae67b17bf69b.png)
 
 ##### 图5-1 单击＋号按钮 > 定时器
 
 b）定时器里选择高斯随机定时器。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192465394-a063f5b3-8611-40d5-8715-c3d7bf8732f1.png)
 
 ##### 图5-2 选择高斯随机定时器
 
 c）输入固定延迟时间和随机延迟最大时间，然后单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/5-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192465413-0bc5126f-136e-4f59-b571-5f15e71a9487.png)
 
 ##### 图5-3 输入相关参数
 
@@ -30,6 +30,6 @@ c）输入固定延迟时间和随机延迟最大时间，然后单击执行。
 
 d）延迟时间过后进行接口请求，然后显示执行报告。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/4.%20%E5%AE%9A%E6%97%B6%E5%99%A8/5-4.png)
+![image](https://user-images.githubusercontent.com/79617492/192465433-c066ce86-af75-40e4-86f0-cf370b84a9e8.png)
 
 ##### 图5-4 显示执行报告
