--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/1. JSON断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/1. JSON断言.md
@@ -40,3 +40,9 @@ b6）预期值是否为null：验证预期值是否为空。
 b7）断言结果是否取反：勾选后，当预期值为True时，断言失败；预期值为False时，断言成功。
 
 ```
+
+c）执行成功，查看执行报告断言结果。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/1-3.png)
+
+##### 图1-3 查看执行报告断言结果
