--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/2. MD5Hex断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/2. MD5Hex断言.md
@@ -1,1 +1,19 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.5 断言
+
+##### 4.5.2 MD5Hex断言
+
+MD5为及计算机安全领域广泛使用的一种散列函数，用以提供消息的完整性保护。预期的响应体内容经过MD5 32位小写加密后，通过跟MD5Hex断言里的密文进行比较，一致则断言通过，本节介绍如何使用MD5Hex断言。
+
+##### 4.5.2.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击＋号按钮 > 断言。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/2-1.png)
+
+##### 图2-1 单击＋号按钮 > 断言
+
+b）选择MD5Hex断言。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/2-2.png)
