--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/2. MD5Hex断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/2. MD5Hex断言.md
@@ -39,3 +39,15 @@ d）执行成功，查看执行报告断言结果。
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/2-4.png)
 
 ##### 图2-4 查看执行报告断言结果
+
+e）如果没有MD5加密工具，不清楚响应体加密后的密文时，也可以直接在MD5hex断言里输入错误的密文，然后单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/2-5.png)
+
+##### 图2-5 直接输入错误的密文
+
+f）查看执行报告里的断言，可以查看到正确的密文，然后再将正确的密文复制黏贴到MD5hex断言里即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/2-6.png)
+
+##### 图2-6 查看正确的密文
