--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/3. XML断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/3. XML断言.md
@@ -1,1 +1,17 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.5 断言
+
+##### 4.5.3 XML断言
+
+XML断言是通过验证返回数据是否为XML格式进行断言，返回数据为XML格式时，则为True，否则为False。
+
+##### 4.5.3.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击"＋" 再单击断言。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/3-1.png)
+
+##### 图3-1 单击"＋" 再单击断言
+
+b）选择“XML断言”，然后单击执行。
