--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/4. XPath断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/4. XPath断言.md
@@ -1,1 +1,17 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.5 断言
+
+##### 4.5.4 XPath断言
+
+如果接口的响应体为xml或html格式的，可以用XPath断言来判断响应体是否为预期结果。本节将详细介绍如何使用XPath断言。
+
+##### 4.5.4.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击"＋"按钮，再单击断言。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-1.png)
+
+##### 图4-1 单击"＋" 再单击断言
+
+b）在下拉框选择“XPath断言”。
