--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/4. XPath断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/4. XPath断言.md
@@ -37,3 +37,13 @@ c3）Invert assertion：反转断言，确认都不匹配则断言成功。
 ```
 
 d）等待执行完毕，单击执行报告的响应体，查看响应体。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-4.png)
+
+##### 图4-4 查看响应体
+
+e）单击断言，可查看成功断言title标签存在。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-5.png)
+
+##### 图4-5 查看成功断言title标签存在
