--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/4. XPath断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/4. XPath断言.md
@@ -10,19 +10,19 @@
 
 a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击"＋"按钮，再单击断言。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/192468705-928b4753-819e-4181-9599-26ca38909311.png)
 
 ##### 图4-1 单击"＋" 再单击断言
 
 b）在下拉框选择“XPath断言”。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/192468719-d703c6ae-a2e5-42b9-9395-e21811980595.png)
 
 ##### 图4-2 选择“XPath断言”
 
 c）输入XPath表达式，单击执行。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-3.png)
+![image](https://user-images.githubusercontent.com/79617492/192468731-8886f3ea-861f-4173-8a36-bbf3e99d7e98.png)
 
 ##### 图4-3 输入XPath表达式
 
@@ -38,12 +38,12 @@ c3）Invert assertion：反转断言，确认都不匹配则断言成功。
 
 d）等待执行完毕，单击执行报告的响应体，查看响应体。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-4.png)
+![image](https://user-images.githubusercontent.com/79617492/192468756-445dab14-cbd0-438a-b6a1-78116bda8d53.png)
 
 ##### 图4-4 查看响应体
 
 e）单击断言，可查看成功断言title标签存在。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/4-5.png)
+![image](https://user-images.githubusercontent.com/79617492/192468773-3ecc3902-80e8-4160-b29b-ded8313f5fd3.png)
 
 ##### 图4-5 查看成功断言title标签存在
