--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/5. 响应断言.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/5. 响应断言.md
@@ -1,1 +1,24 @@
-test
+### 4. 测试场景组件介绍
+
+#### 4.5 断言
+
+##### 4.5.5 响应断言
+
+断言组件用来对服务器的响应数据做验证，可以用来判断系统返回的响应结果是否正确，以此判断当前测试场景接口是否通过。响应断言是通过对返回消息中的内容进行比较，来判断响应的结果是否和预期结果一致。
+
+##### 4.5.5.1 操作步骤
+
+a）进入全自动测试平台的测试场景页面，选择已有测试场景的测试用例，单击接口，然后单击"＋" 再单击断言。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/5-1.png)
+
+##### 图5-1 单击"＋" 再单击断言
+
+b）选择响应断言和需要断言的字段，以及匹配规则，然后单击新增。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/5-2.png)
+
+##### 图5-2 选择断言相关信息
+
+```
+说明：
