--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/7. 断言持续时间.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/5. 断言/7. 断言持续时间.md
@@ -21,3 +21,13 @@ b）选择断言，下拉框选择“断言持续时间”。
 ##### 图7-2 选择“断言持续时间”
 
 c）根据需要在断言持续时间输入框输入预期响应时间，单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/7-3.png)
+
+##### 图7-3 输入预期响应时间
+
+d）在执行报告处可看到断言信息。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/5.%20%E6%96%AD%E8%A8%80/7-4.png)
+
+##### 图7-4 在执行报告处看到断言信息
