--- a/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/1. 执行控制器.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景组件介绍/6. 逻辑控制器/1. 执行控制器.md
@@ -57,3 +57,105 @@ d）按照步骤 c），再添加两个接口。
 e）单击保存，然后单击执行。
 
 ![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-5.png)
+
+##### 图1-5 单击保存并执行
+
+f）查看执行报告，执行报告里显示只随机执行了一个接口请求。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-6.png)
+
+##### 图1-6 查看执行报告
+
+##### 4.6.1.1.2 执行控制器的顺序随机执行
+
+a）执行控制器选择“顺序随机执行”，单击保存，然后单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-7.png)
+
+##### 图1-7 选择“顺序随机执行”
+
+b）查看执行报告，接口请求按顺序随机执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-8.png)
+
+##### 图1-8 查看执行报告
+
+##### 4.6.1.1.3 执行控制器的吞吐量控制执行
+
+a）单击根场景组，然后单击＋号按钮 > 逻辑控制器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-9.png)
+
+##### 图1-9 单击＋号按钮 > 逻辑控制器
+
+b）选择“流程控制器 > 循环控制器”，输入循环次数，然后选中逻辑控制器，单击＋号按钮 > 逻辑控制器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-10.png)
+
+##### 图1-10 输入循环次数
+
+c）选择“执行控制器 > 吞吐量控制执行”，输入吞吐量，然后单击＋号按钮 > 接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-11.png)
+
+##### 图1-11 输入吞吐量
+
+##### 说明：吞吐量是按百分比计算的。
+
+d）添加接口后，单击保存，然后单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-12.png)
+
+##### 图1-12 添加接口
+
+e）查看执行报告，接口请求执行次数等于循环次数的30%。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-13.png)
+
+##### 图1-13 查看执行报告
+
+##### 说明：接口请求执行次数等于循环次数的吞吐量。比如：吞吐量为30时，执行次数为循环次数的30%。
+
+##### 4.6.1.1.4 执行控制器的交替执行
+
+a）单击根场景组，然后单击＋号按钮 > 逻辑控制器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-14.png)
+
+##### 图1-14 单击＋号按钮 > 逻辑控制器
+
+b）选择“流程控制器 > 循环控制器”，输入循环次数，然后选中逻辑控制器，单击＋号按钮 > 逻辑控制器。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-15.png)
+
+##### 图1-15 输入循环次数
+
+c）选择“执行控制器 > 交替执行”。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-16.png)
+
+##### 图1-16 选择“执行控制器 > 交替执行”
+
+d）选中执行控制器，然后单击＋号按钮 > 接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-17.png)
+
+##### 图1-17 单击＋号按钮 > 接口
+
+e）添加两个接口，然后选中流程控制器，单击＋号按钮 > 接口。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-18.png)
+
+##### 图1-18 添加两个接口
+
+f）添加1个接口，单击保存，然后单击执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-19.png)
+
+##### 图1-19 添加1个接口
+
+g）查看执行报告，接口请求交替执行。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%BB%84%E4%BB%B6%E4%BB%8B%E7%BB%8D/6.%20%E9%80%BB%E8%BE%91%E6%8E%A7%E5%88%B6%E5%99%A8/1-20.png)
+
+##### 图1-20 查看执行报告
