--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/10. 本地客户端/2. 启动本地客户端.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/10. 本地客户端/2. 启动本地客户端.md
@@ -1,1 +1,58 @@
-test
+### 2. 快速入门
+
+#### 2.10 本地客户端
+
+#### 2.10.2 启动本地客户端
+
+本节为您分别介绍在Windows系统、Linux系统下如何启动本地客户端，社区版本地客户端与商用版本地客户端的启动方式相同。
+
+#### 2.10.2.1 前提条件
+
+您已安装1.8.0.91或以上版本JDK环境。
+
+##### 注意：若本地客户端启动闪退，请检查JDK版本以及端口号是否被占用。
+
+#### 2.10.2.2 Windows系统下本地客户端启动步骤
+
+a）解压本地客户端后双击startup.bat，命令行窗口出现“flow-core启动完毕!”信息便说明本地客户端已成功启动。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/2-1.png)
+
+##### 图2-1 双击startup.bat
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/10.%20%E6%9C%AC%E5%9C%B0%E5%AE%A2%E6%88%B7%E7%AB%AF/2-2.png)
+
+##### 图2-2 本地客户端已成功启动
+
+##### 说明：本地客户端启动端口默认为8080，若您需要修改端口号或其他配置信息，创建一个application.yml文件放置于feisuanyz-local-engine.jar文件同一目录即可。
+
+application.yml文件创建模板如下：
+
+```
+server:
+    # 服务端口
+    port: 8080
+
+# 系统日志配置
+logging:
+    file:
+        path: /logs
+
+
+# 系统日志存储到kafka
+logging:
+    config: classpath:logback-kafka.xml
+
+# kafka相关配置，日志默认是保存到本地文件中，我们也支持将日志存储到kafka，需要按照下面模板进行配置
+fs:
+    kafka:
+        producer-enabled: true
+        producers:
+            logback:
+            # kafka集群地址
+                bootstrapservers: bootstrap.servers=127.0.0.1:9092,127.0.0.2:9093,127.0.0.3:9092
+                # topic
+        topic: flow-system-logs
+```
+
+##### 注意：日志文件的存储方式只能选择一种。
