--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/11. 常见问题/1. 如何动态获取SQL字段.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/11. 常见问题/1. 如何动态获取SQL字段.md
@@ -37,3 +37,27 @@ a）在配置接口参数处定义需进行动态获取的参数。
 ##### 注意：此处定义的参数需与SQL语句中SQL字段参数保持一致，否则将无法传参。
 
 #### 2.11.1.2.2 接口模型编辑
+
+a）在窗体视图中使用了一个单SQL组件和一个输出结果组件来实现功能，单SQL组件中的SQL语句如下所示。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/11.%20%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98/1-4.png)
+
+##### 图1-4 组件流程图
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/11.%20%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98/1-5.png)
+
+##### 图1-5 单SQL组件中的SQL语句
+
+```
+注意：
+
+a1）SQL语句中动态获取的参数字段需与上一步骤中定义的接口参数保持一致，否则将无法传参。
+
+a2）select查询语句查询字段使用动态获取时，每个字段需取一个别名，如上图中的${str1} as id；其他语句没有这样的限制。
+
+a3）若SQL语句中表名或字段名使用动态获取，则SQL在线调试功能将无法执行SQL语句。
+
+a4）动态获取字表名/字段格式为${xxx}，动态字段值格式为#{xxx}，两者有所区别，不可颠倒。
+```
+
+b）单SQL组件的入参选择接口参数即可。
