--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/11. 常见问题/1. 如何动态获取SQL字段.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/2. 快速入门/11. 常见问题/1. 如何动态获取SQL字段.md
@@ -61,3 +61,19 @@ a4）动态获取字表名/字段格式为${xxx}，动态字段值格式为#{xxx
 ```
 
 b）单SQL组件的入参选择接口参数即可。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/11.%20%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98/1-6.png)
+
+##### 图1-6 选择接口参数
+
+#### 2.11.1.2.3 接口测试用例，查看结果
+
+a）提交发布接口后，编辑测试用例，填写需传入的参数值，执行测试用例，查看执行结果。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/11.%20%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98/1-7.png)
+
+##### 图1-7 编辑测试用例
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/2.%20%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8/11.%20%E5%B8%B8%E8%A7%81%E9%97%AE%E9%A2%98/1-8.png)
+
+##### 图1-8 查看执行结果
