--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/2. 实名认证.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/2. 实名认证.md
@@ -1,1 +1,27 @@
-test
+### 3. 控制台使用指引
+
+#### 3.1 注册使用SoFlu软件机器人
+
+#### 3.1.2 实名认证
+
+为了保护您的飞算云智账号安全，您需要完成实名认证，可以选择个人实名认证或者企业实名认证。
+
+#### 3.1.2.1 前提条件
+
+a）您已完成飞算云智账号注册。
+
+b）若您选择个人实名认证，则需要准备个人身份证；若您选择企业实名认证，则需要准备清晰的营业执照照片。
+
+#### 3.1.2.2 操作步骤
+
+a）您可以在完成账号注册之后，单击“立即实名认证”进入[实名认证页面](https://user.feisuanyz.com/verified/main)；也可以使用注册成功的飞算云智账号登录进入[飞算云智控制台](https://user.feisuanyz.com/home)，选择“实名认证”功能进入[实名认证页面](https://user.feisuanyz.com/verified/main)。
+
+b）在实名认证页面，您需要根据实际情况选择“个人实名认证”或“企业实名认证”。
+
+c）若您选择“个人实名认证”，则需扫描二维码上传有效身份证的正反面并进行人脸识别。
+
+d）若您选择“企业实名认证”，则需要上传清晰的营业执照照片。
+
+#### 3.1.2.3 预期结果
+
+a）个人实名认证完成显示。
