--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/3. 申请试用.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/3. 申请试用.md
@@ -15,3 +15,13 @@
 a）您可以在实名认证操作完成后，进入[官网首页](https://www.feisuanyz.com/)，单击右上角“申请试用”。
 
 b）进入申请试用问卷表单页面，将所有信息填写完成后，单击“提交”即可。
+
+c）提交试用申请之后，我们会安排工作人员联系您，预计在3个工作日内为您反馈审核结果。
+
+##### 3.1.3.3 预期结果
+
+a）申请试用审核通过之后，通过飞算云智控制台进入[我的订单页面](https://user.feisuanyz.com/orderManage/myOrder)，您可以查看到一笔试用订单待关联使用权。
+
+![输入图片说明](../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/3.%20%E6%8E%A7%E5%88%B6%E5%8F%B0%E4%BD%BF%E7%94%A8%E6%8C%87%E5%BC%95/1.%20%E6%B3%A8%E5%86%8C%E4%BD%BF%E7%94%A8SoFlu%E8%BD%AF%E4%BB%B6%E6%9C%BA%E5%99%A8%E4%BA%BA/3-1.png)
+
+##### 图3-1 查看到一笔试用订单待关联使用权
