--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/4. 购买产品.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/4. 购买产品.md
@@ -1,1 +1,23 @@
-test
+### 3. 控制台使用指引
+
+#### 3.1 注册使用SoFlu软件机器人
+
+#### 3.1.4 购买产品
+
+当您确定需要购买SoFlu软件机器人，可拨打电话400-8322321或在线咨询客服，待客服人员将您加入购买白名单，您便可以进入购买界面后完成购买操作。
+
+##### 3.1.4.1 前提条件
+
+您已完成账号实名认证。
+
+##### 3.1.4.2 操作步骤
+
+a）通过[飞算云智官网首页](https://www.feisuanyz.com/)购买入口或[飞算云智控制台](https://user.feisuanyz.com/home)购买入口，单击“立即购买”进入产品购买界面，或者直接进入[产品购买界面](https://www.feisuanyz.com/purchase/chooseProduct/?orderType=1&productId=5f8df152dc018d0008854d55)。
+
+b）在产品购买界面，您可以选择使用期限并设置使用人数，单击“确认订单”。
+
+##### 注意：若需有多人使用SoFlu软件机器人，则需要设置多个使用人数，设置的使用人数数量将相应生成使用权数量，后续您可以使用主账号用户进行使用权授权。
+
+c）此时系统会提示“请拔打400-8322321或通过在线客服咨询购买事项”，通过客服咨询可以确认您的购买需求且非误操作。
+
+d）待客服人员将您加入购买白名单，再次单击“确认订单”即可进入填写合同信息界面。
