--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/5. 为用户赋予使用权.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/3. 控制台使用指引/1. 注册使用SoFlu软件机器人/5. 为用户赋予使用权.md
@@ -1,1 +1,21 @@
-test
+### 3. 控制台使用指引
+
+#### 3.1 注册使用SoFlu软件机器人
+
+#### 3.1.5 为用户赋予使用权
+
+试用申请审核通过或者产品购买付款完成之后，您便可以为指定用户赋予使用权，只有被赋予使用权的用户才可以使用SoFlu软件机器人。
+
+```
+注意：
+
+a）仅主账号用户拥有使用权管理权限。
+
+b）一条使用权记录仅能赋予一个用户，若您未创建其他子账号用户，可被赋予使用权的用户仅限于当前主账号用户。
+
+c）若您需要将使用权赋予其他子账号用户，请在创建子账号用户后再进行授权操作，创建子账号用户的具体操作流程请参见“控制台使用指引 > 子账号管理 > 创建子账号用户”。
+
+d）若您需为多个用户赋予使用权，购买产品时需选择多个使用人数以获取多个使用权。
+```
+
+##### 3.1.5.1 前提条件
