--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/5. 分配数据中心.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/3. 配置中心/2. 环境管理/5. 分配数据中心.md
@@ -18,18 +18,18 @@ b）权限由系统管理员在“用户权限中心”系统中配置。
 
 a）进入数据中心管理页面，在左侧环境列表中选择需进行数据中心分配的环境，单击分配数据中心选项。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/5-1.png)
+![image](https://user-images.githubusercontent.com/79617492/196903949-3c1a3018-b2b9-4adb-88bf-2fc87d94c91d.png)
 
 ##### 图5-1 单击分配数据中心选项
 
 b）系统弹出分配数据中心页面，选择需分配的数据中心，单击 + 按钮，选择完毕后单击保存。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/5-2.png)
+![image](https://user-images.githubusercontent.com/79617492/196903970-77d6e1e7-4442-489f-a11c-526ce0c4fde3.png)
 
 ##### 图5-2 选择需分配的数据中心
 
 c）您可以在右侧数据中心区域查看具体的分配情况，同时可将指定环境设置为默认环境。
 
-![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E9%85%8D%E7%BD%AE%E4%B8%AD%E5%BF%83/2.%20%E7%8E%AF%E5%A2%83%E7%AE%A1%E7%90%86/5-3.png)
+![image](https://user-images.githubusercontent.com/79617492/196903988-138666a8-8e63-472b-8bca-c63815215d07.png)
 
 ##### 图5-3 查看具体的分配情况
