--- a/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/1. 新增流程变量.md
+++ b/SoFlu（后端）全自动开发平台教程/1. 最新版本 - 更新日期 - 2022.10.08/4. 操作指南/13. 接口管理/4. 流程编辑器/1. 新增流程变量.md
@@ -27,3 +27,19 @@ b）选择“全局变量”或“局部变量”，单击“新增”，如图1
 ![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/1-2.png)
 
 ##### 图1-2 新增变量
+
+c）填写变量名称和描述，单击“新增”编辑该变量的字段，如图1-3所示。
+
+![输入图片说明](../../../../../images/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0/1.%20%E6%9C%80%E6%96%B0%E7%89%88%E6%9C%AC%20-%20%E6%9B%B4%E6%96%B0%E6%97%A5%E6%9C%9F%20-%202022.10.08/4.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/13.%20%E6%8E%A5%E5%8F%A3%E7%AE%A1%E7%90%86/4.%20%E6%B5%81%E7%A8%8B%E7%BC%96%E8%BE%91%E5%99%A8/1-3.png)
+
+##### 图1-3 编辑变量的字段
+
+```
+说明：
+
+c1）字段的类型可选择基本类型、自定义变量类型、全局变量类型、局部变量类型以及实体模型。
+
+c2）若要在赋值组件中使用该流程变量，需将平台加载到最新版本。
+```
+
+d）编辑完成后，单击“提交”即可。
